# dune-foamgrid

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  Makefile.am  README  README.md  TODO  configure.ac  dune-foamgrid.pc.in  dune.module
cmake/modules/: Makefile.am
doc/: Makefile.am
doc/doxygen/: CMakeLists.txt  Makefile.am
doc/grids/gmsh/: line1d2d.msh
dune/: Makefile.am
dune-foamgrid/: Makefile.am  foamgrid.hh
dune-foamgrid/foamgrid/: foamgridedge.hh  foamgridelements.hh  foamgridentity.hh  foamgridentitypointer.hh  foamgridfactory.hh  foamgridgeometry.hh  foamgridhierarchiciterator.hh  foamgridindexsets.hh  foamgridintersectioniterators.hh  foamgridintersections.hh  foamgridleafiterator.hh  foamgridleveliterator.hh  foamgridvertex.hh
dune-foamgrid/test/: Makefile.am  foamgrid-test.cc
dune/foamgrid/: CMakeLists.txt  Makefile.am  dgffoam.cc  dgffoam.hh  foamgrid.hh
dune/foamgrid/foamgrid/: CMakeLists.txt  Makefile.am  foamgrid.cc  foamgrid.impl.hh  foamgridedge.hh  foamgridelements.hh  foamgridentity.hh  foamgridentitypointer.hh  foamgridentityseed.hh  foamgridfactory.hh  foamgridgeometry.hh  foamgridhierarchiciterator.hh  foamgridindexsets.hh  foamgridintersectioniterators.hh  foamgridintersections.hh  foamgridleafiterator.hh  foamgridleveliterator.hh  foamgridlocalgeometry.hh  foamgridvertex.hh  foamgridviews.hh  nulliteratorfactory.hh
dune/foamgrid/test/: CMakeLists.txt  Makefile.am  boundary-segment-test.cc  foamgrid-test.cc  global-refine-test.cc  growth-test-1d.cc  growth-test-2d.cc  growth-test.cc  local-refine-test.cc  make2din3dgrid.hh  setposition-test.cc
examples/: CMakeLists.txt  elementparametrization.cc  grid-growth.cc  grid-growth.ini  heat.ini  parametrized-refinement.cc  transport-fv.cc
examples/data/: y-grid.msh
m4/: CMakeLists.txt  Makefile.am  dune-foamgrid.m4
python/: CMakeLists.txt
python/dune/foamgrid/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  dune_foamgrid.cc
