foamgriddir = $(includedir)/dune/foamgrid/foamgrid

foamgrid_HEADERS = foamgridentitypointer.hh foamgridhierarchiciterator.hh \
                  foamgridleafiterator.hh foamgridentity.hh \
                  foamgridgeometry.hh foamgridindexsets.hh foamgridintersections.hh \
                  foamgridintersectioniterators.hh foamgridleveliterator.hh

include $(top_srcdir)/am/global-rules
