foamgriddir = $(includedir)/dune/foamgrid/foamgrid

foamgrid_HEADERS = foamgridentity.hh \
                   foamgridentitypointer.hh \
                   foamgridgeometry.hh \
                   foamgridhierarchiciterator.hh \
                   foamgridindexsets.hh \
                   foamgridintersectioniterators.hh \
                   foamgridintersections.hh \
                   foamgridleafiterator.hh \
                   foamgridleveliterator.hh

include $(top_srcdir)/am/global-rules
