foamgriddir = $(includedir)/dune/foamgrid/foamgrid

foamgrid_HEADERS = foamgrid.cc \
                   foamgridedge.hh \
                   foamgridentity.hh \
                   foamgridentitypointer.hh \
                   foamgridentityseed.hh \
                   foamgridfactory.hh \
                   foamgridgeometry.hh \
                   foamgridhierarchiciterator.hh \
                   foamgridindexsets.hh \
                   foamgridintersectioniterators.hh \
                   foamgridintersections.hh \
                   foamgridleafiterator.hh \
                   foamgridleveliterator.hh \
                   foamgridvertex.hh \
                   foamgridviews.hh

include $(top_srcdir)/am/global-rules
